--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb-client-encryption": "^1.2.6",
     "mongoose": "^5.13.5",
-    "nodemon": "^2.0.12"
+    "netlify-lambda": "^2.0.13",
+    "nodemon": "^2.0.12",
+    "serverless-http": "^2.7.0"
   }
 }
